crates/models/src/validation/tests/snapshots/models__validation__tests__capture_endpoint_not_found.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://int-string-capture#/captures/testing~1int-string~1pull,
        error: endpoint CaptureEndpoit, referenced by capture testing/int-string/pull, is not defined; did you mean captureEndpoint defined at test://root#/endpoints/captureEndpoint?,
    },
    Error {
        scope: test://int-string-capture#/captures/testing~1int-string~1push,
        error: endpoint wildlyOffName, referenced by capture testing/int-string/push, is not defined,
    },
]
