crates/models/src/validation/tests/snapshots/models__validation__tests__capture_endpoint_wrong_type.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://int-string-capture#/captures/testing~1int-string~1pull,
        error: Postgres is not a supported endpoint type for a capture,
    },
]
