crates/models/src/validation/tests/snapshots/models__validation__tests__capture_target_is_derivation_and_missing_imports.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://int-string-capture#/captures/testing~1int-string~1pull,
        error: capture testing/int-string/pull references collection testing/int-reverse, defined at test://int-reverse#/collections/testing~1int-reverse, without importing it or being imported by it,
    },
    Error {
        scope: test://int-string-capture#/captures/testing~1int-string~1pull,
        error: capture testing/int-string/pull cannot capture into derived collection testing/int-reverse,
    },
    Error {
        scope: test://int-string-capture#/captures/testing~1int-string~1push,
        error: capture testing/int-string/push references collection testing/int-string, defined at test://int-string#/collections/testing~1int-string, without importing it or being imported by it,
    },
]
