crates/models/src/validation/tests/snapshots/models__validation__tests__capture_target_not_found.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://int-string-capture#/captures/testing~1int-string~1pull,
        error: collection testiNg/int-strinK, referenced by capture testing/int-string/pull, is not defined; did you mean testing/int-string defined at test://int-string#/collections/testing~1int-string?,
    },
    Error {
        scope: test://int-string-capture#/captures/testing~1int-string~1push,
        error: collection wildly/off/name, referenced by capture testing/int-string/push, is not defined,
    },
]
