crates/models/src/validation/tests/snapshots/models__validation__tests__collection_store_not_found.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://int-reverse#/collections/testing~1int-reverse,
        error: endpoint WildlyOffName, referenced by collection testing/int-reverse, is not defined,
    },
    Error {
        scope: test://int-string#/collections/testing~1int-string,
        error: endpoint sToreEndpoin, referenced by collection testing/int-string, is not defined; did you mean storeEndpoint defined at test://root#/endpoints/storeEndpoint?,
    },
]
