crates/models/src/validation/tests/snapshots/models__validation__tests__invalid_capture_names_prefixes_and_duplicates.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://root#/captures/,
        error: capture name cannot be empty,
    },
    Error {
        scope: test://root#/captures/~1bad~1name,
        error: /bad/name cannot be used as name for capture ("/" is invalid),
    },
    Error {
        scope: test://root#/captures/bad%20name,
        error: bad name cannot be used as name for capture (" name" is invalid),
    },
    Error {
        scope: test://root#/captures/bad!name,
        error: bad!name cannot be used as name for capture ("!name" is invalid),
    },
    Error {
        scope: test://root#/captures/bad~1~1name,
        error: bad//name cannot be used as name for capture ("//name" is invalid),
    },
    Error {
        scope: test://root#/captures/bad~1name~1,
        error: bad/name/ cannot be used as name for capture ("/" is invalid),
    },
    Error {
        scope: test://root#/captures/,
        error: capture  is a prohibited prefix of /bad/name, defined at test://root#/captures/~1bad~1name,
    },
    Error {
        scope: test://root#/captures/testing,
        error: capture testing is a prohibited prefix of testing/int-sTRinG/pUll, defined at test://root#/captures/testing~1int-sTRinG~1pUll,
    },
    Error {
        scope: test://root#/captures/testing~1int-sTRinG~1pUll,
        error: capture testing/int-sTRinG/pUll has a duplicated definition at test://int-string-capture#/captures/testing~1int-string~1pull,
    },
    Error {
        scope: test://root#/captures/testing~1Int-strINg~1PuSH,
        error: capture testing/Int-strINg/PuSH has a duplicated definition at test://int-string-capture#/captures/testing~1int-string~1push,
    },
]
