crates/models/src/validation/tests/snapshots/models__validation__tests__invalid_collection_names_prefixes_and_duplicates.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://root#/collections/~1bad~1name,
        error: /bad/name cannot be used as name for collection ("/" is invalid),
    },
    Error {
        scope: test://root#/collections/bad%20name,
        error: bad name cannot be used as name for collection (" name" is invalid),
    },
    Error {
        scope: test://root#/collections/bad!name,
        error: bad!name cannot be used as name for collection ("!name" is invalid),
    },
    Error {
        scope: test://root#/collections/bad~1~1name,
        error: bad//name cannot be used as name for collection ("//name" is invalid),
    },
    Error {
        scope: test://root#/collections/bad~1name~1,
        error: bad/name/ cannot be used as name for collection ("/" is invalid),
    },
    Error {
        scope: test://root#/collections/,
        error: collection name cannot be empty,
    },
    Error {
        scope: test://root#/collections/,
        error: collection  is a prohibited prefix of /bad/name, defined at test://root#/collections/~1bad~1name,
    },
    Error {
        scope: test://root#/collections/testing,
        error: collection testing is a prohibited prefix of testing/Int-Halve, defined at test://root#/collections/testing~1Int-Halve,
    },
    Error {
        scope: test://root#/collections/testing~1Int-Halve,
        error: collection testing/Int-Halve has a duplicated definition at test://int-halve#/collections/testing~1int-halve,
    },
    Error {
        scope: test://root#/collections/testing~1int-sTRinG,
        error: collection testing/int-sTRinG has a duplicated definition at test://int-string#/collections/testing~1int-string,
    },
]
