crates/models/src/validation/tests/snapshots/models__validation__tests__invalid_endpoint_names_and_duplicates.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://more-endpoints#/endpoints/,
        error: endpoint name cannot be empty,
    },
    Error {
        scope: test://more-endpoints#/endpoints/inv%20alid,
        error: inv alid cannot be used as name for endpoint (" alid" is invalid),
    },
    Error {
        scope: test://more-endpoints#/endpoints/inv!alid,
        error: inv!alid cannot be used as name for endpoint ("!alid" is invalid),
    },
    Error {
        scope: test://more-endpoints#/endpoints/inv~1alid,
        error: inv/alid cannot be used as name for endpoint ("/alid" is invalid),
    },
    Error {
        scope: test://root#/endpoints/captureEndpoint,
        error: endpoint captureEndpoint has a duplicated definition at test://more-endpoints#/endpoints/CAPtUReEndpoINT,
    },
    Error {
        scope: test://root#/endpoints/storeEndpoint,
        error: endpoint storeEndpoint has a duplicated definition at test://more-endpoints#/endpoints/StoreEndpoinT,
    },
]
